--- a/.github/workflows/OpenWrt_Build_x64_gxnas.yml
+++ b/.github/workflows/OpenWrt_Build_x64_gxnas.yml
@@ -24,7 +24,7 @@ on:
       CONFIG_FILE:
         description: '请选择配置文件'
         required: true
-        default: 'x64_gxnas'
+        default: 'x86_64'
         type: choice
         options:
           - 'x64_gxnas'
