--- a/.github/workflows/OpenWrt_Build_x64_gxnas.yml
+++ b/.github/workflows/OpenWrt_Build_x64_gxnas.yml
@@ -172,11 +172,11 @@ jobs:
         cd openwrt
         source ${BUILD_PATH}/common.sh && Diy_menu3
  
-    #- name: 加载自定义设置
-      #if: env.REPO_TOKEN
-      #run: |
-        #cd openwrt
-        #source ${BUILD_PATH}/common.sh && Diy_menu4
+    - name: 加载自定义设置
+      if: env.REPO_TOKEN
+      run: |
+        cd openwrt
+        source ${BUILD_PATH}/common.sh && Diy_menu4
         
     - name: 安装插件源
       if: env.REPO_TOKEN
