--- a/.github/workflows/OpenWrt_Build_x64_gxnas.yml
+++ b/.github/workflows/OpenWrt_Build_x64_gxnas.yml
@@ -81,7 +81,7 @@ on:
 
 # 定时触发开启开始编译(把下面两个#去掉开启,时间设置请看定时开启编译说明)
   schedule:
-   - cron: 0 2 * * 1
+   - cron: 0 0 0/24 1/1 * ? 
 
 env:
   GITHUB_LINK: https://github.com/${{github.repository}}
