--- a/.github/workflows/OpenWrt_Build_x64_gxnas.yml
+++ b/.github/workflows/OpenWrt_Build_x64_gxnas.yml
@@ -81,7 +81,7 @@ on:
 
 # 定时触发开启开始编译(把下面两个#去掉开启,时间设置请看定时开启编译说明)
   schedule:
-   - cron: 0 2 * * 5
+   - cron: 0 1 * * *
 
 env:
   GITHUB_LINK: https://github.com/${{github.repository}}
@@ -205,7 +205,7 @@ jobs:
 
 
     - name: OpenWrt Image information
-          -Default IP:192.168.8.8
+          Default IP:192.168.8.8
       
     - name: 编译信息
       continue-on-error: true
