--- a/.github/workflows/OpenWrt_Build_x64_gxnas.yml
+++ b/.github/workflows/OpenWrt_Build_x64_gxnas.yml
@@ -41,7 +41,7 @@ on:
       INFORMATION_NOTICE:
         description: 'Telegram或pushplus信息通知'
         required: true
-        default: 'Pushplus'
+        default: '关闭'
         type: choice
         options:
           - '关闭'
@@ -81,7 +81,7 @@ on:
 
 # 定时触发开启开始编译(把下面两个#去掉开启,时间设置请看定时开启编译说明)
   schedule:
-   - cron: 0 1 * * *
+   - cron: 1 8 * * *
 
 env:
   GITHUB_LINK: https://github.com/${{github.repository}}
