--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -192,7 +192,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         #name: ${{ env.SOURCE }}-${{ env.PROMPT_TING }}
-        name: OpenWrt_x64_gxnas-${{ env.Firmware_Date }}
+        name: OpenWrt_x86_64-${{ env.Firmware_Date }}
         tag: a${{ env.date }}
         token: ${{ secrets.REPO_TOKEN }}
         allowUpdates: true
